<resources>
    <string name="app_name">AndreyStory</string>
    <string name="_return">начать сначала</string>
    <string name="_continue">че там дальше по сценарию</string>
    <string name="question">Кто же я по жизни?</string>
    <string name="title_page">Вы играете за Андрея. Андрей известен всему миру своей любовью к хлебу. На протяжении трех десятилетий
    он поедал хлеб из своего амбара, однако, как и все хорошее, хлеб когда-нибудь кончается. Сегодняшний день и стал роковым.
    Добудьте себе пропитание, иначе Андрей умрет.</string>
    <string name="help_andrey">добывать</string>
    <string name="dont_help_andrey">умереть от голода</string>

    <string name="butilka_meeting">Выйдя из квартиры, в подъезде вы замечаете бутылку настоящего чешского пива.
    Вы можете выпить ее (сила +1, удача -1) или пройти мимо, потому что ЗОЖ - это второе имя Андрея.</string>

    <string name="drink">выпить</string>
    <string name="dont_drink">проигнорировать</string>
    <string name="power">сила:</string>
    <string name="dexterity">удача:</string>
    <string name="intelligence">интеллект:</string>

    <string name="power_point">очки силы</string>
    <string name="dexterity_point">очки удачи</string>
    <string name="intelligence_point">очки интеллекта</string>

    <string name="tolik_meeting">Выйдя из подъезда, вы неожиданно натыкаетесь на умершего Егора Летова. Он уважает
        сильных мужиков, поэтому если хотите побухать с ним (осуждаю!!!!, +1 к силе)  и не получить гитарой по лицу,
        необходимо иметь силу не менее 1. Также можно попытаться обойти его, если вы вдруг за ЗОЖ или не любите русский панк-рок (+3 к интеллекту).</string>

    <string name="drink_with_Letov">Бухнуть с Летовым</string>
    <string name="dont_drink_with_Letov">Откажусь, пожалуй</string>

    <string name="drink_with_Letov_failed">Вы были недостаточно сильны для того, чтобы бухать с Летовым. Организм
    не выдержал попойки и удара басухой по лицу. Теперь место Андрея на небесах рядом с Честером Беннингтоном, однако нельзя однозначно утверждать,
        что вы не прошли игру. По крайней мере, Андрей более не нуждается в хлебе
    </string>

    <string name="drink_with_Letov_successed">Эта попойка стала известной всему миру и вошла в историю как
    "Легендарные посиделки Андрея и Егора". Она воспитала в вас настоящего мужчину, сделала сильнее и помогла
    обзавестись полезными знакомствами.</string>

    <string name="dont_drink_with_Letov_successed">Вы сохранили свое здоровье в сохранности, как и сделал бы любой другой адекватный и разумный человек.
    Это правильный поступок, поэтому разраб великодушно дарит Андрею плюс ТРИ ОЧКА к интеллекту (как будто это на что-то влияет, лол)</string>
    <string name="hit">прописать похоронный</string>
    <string name="cheat">Обмануть охранника</string>
    <string name="guard_meeting">После неожиданной встречи вы без приключений добираетесь до супермаркета. На входе вас тормозит
    злобный охранник и просит надеть маску. Если вы достаточно умны, то можете попытаться обмануть его или, если позволяет сила, прописать
    сочного леща</string>

    <string name="guard_meeting_failed">Вы слишком слабы для того, чтобы завалить сурового Иркутского охранника из "Вулкана" в Юбилейном.
    Эта битва была легендарной, однако кроме Андрея так никто не считает.</string>

    <string name="guard_meeting_successed">Андрей благодаря огромной силе смог победить охранника в кулачном бою. Конечно, 15 лет за убийство
        охранника - не самое приятное явление, однако  в тюрьме тоже дают хлеб, а значит в ближайшее время Андрей может не беспокоиться о своем существовании.</string>


    <string name="guard_meeting_failed_dodge">У вас не хватило интеллекта, чтобы провести мув, для которого нужен четырхзначный IQ.
    Охранник вышвырнул Андрея из супермаркета и теперь он никогда не сможет туда попасть:(. Итс гейм овер</string>

    <string name="guard_meeting_successed_dodge">Вы настолько умны, что унизили охранника и убедили весь персонал магазина в том, что
    маски не спасают от Горчуковируса, за что получаете ЕЩЕ ОДНО ОЧКО к интеллекту. Теперь Андрей может безпрепятственно пройти.</string>

    <string name="selection_of_bread">После пережитых приключений Андрей, наконец, добирается до полки с хлебо-булочными изделиями. У вас разбегаются глаза, ибо выбор слишком
    большой. Вы можете залезть на верхнюю полку и достать оттуда коробку с медвежонком "Барни"(+100 к удаче, ибо полка находится в 400 метрах от вас), либо, как истинный еверей, купить
        буханку черного хлеба, которую можно продать цыганам на рынке с наценкой +200% (+3 к интеллекту), наконец, можно купить боагтырский белый хлеб,
    который даст неимоверную силу тому, кто откусит кусочек.</string>


    <string name="barni">Барни</string>
    <string name="black_bread">черный хлеб</string>
    <string name="white_bread">белый хлеб</string>

    <string name="take_bag">Что ж, вы совершили правильный выбор. Путь завершен, человек. Твое желание будет исполнено. Я вижу твое жлание. Держи этот хлеб *продавщица
    пробивает хлеб и протягивает его вам*. Пакетик брать будете? </string>

    <string name="take_bag_choice">взять пакетик</string>
    <string name="dont_take_bag_choice">не брать пакетик</string>

    <string name="intelledgence_end">Что ж, игра окончена. Андрей построил новый амбар и заполнил его хлебом из супермаркета. Теперь он не умрет с голоду
    и сможете продолжать свое существование. Это был сложный путь, однако решения, принятые Андреем, помогли ему стать самым умным человеком на земле, слишком умным для этого мира.
    Он выучил за три минуты джаву и создал в андроид студио игру по мотивам собственных приключений. После этого Андрей настолько преисполнился в познании, что потерял материальную
        оболочку и влился в неосферу нашей планеты.</string>

    <string name="brave_end">Что ж, игра окончена. Андрей построил новый амбар и заполнил его хлебом из супермаркета. Теперь он не умрет с голоду
    и сможете продолжать свое существование. Это был сложный путь, однако решения, принятые Андреем, помогли ему стать самым сильным человеком на земле,
        слишком сильным для этого мира. Он попал в книгу рекордов Крученингинса, подняв одним лишь мизинцем китайский завод по производству Горчуковируса, а после ушел
    в профессиональный бокс.</string>

    <string name="secret_end">Это секретная концовка для сверхразумов, которые вместо адекватного разумного хлеба заставили есть Андрея
    бедного медведя. Вы только посмотрите на его несчастное лицо.</string>


</resources>