<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BytulkaMeeting"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selection_of_bread"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="304dp"
        android:src="@drawable/bread" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <Button
            android:id="@+id/white_bread"
            android:backgroundTint="@color/red"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/white_bread"/>

        <Button
            android:id="@+id/black_bread"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/green"
            android:text="@string/black_bread"
            android:textSize="15dp" />
        <Button
            android:id="@+id/barni_bread"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/neitral"
            android:text="@string/barni"
            android:textSize="10dp"
            android:onClick="joke"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/power"/>
            <TextView
                android:id="@+id/brave"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/power_point"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/dexterity" />
            <TextView
                android:id="@+id/luck"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dexterity_point"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/intelligence" />
            <TextView
                android:id="@+id/intelligence"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intelligence_point"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>