<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_page"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="480dp"
        android:src="@drawable/andrey" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/start"
            android:backgroundTint="@color/red"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:text="@string/help_andrey"/>
        <Button
            android:id="@+id/exit"
            android:backgroundTint="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:text="@string/dont_help_andrey"
            android:textSize="15dp"/>

    </LinearLayout>

</LinearLayout>